--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet"
           href="style.css">
+          <script src="lampada.js" defer></script>
+
 </head>
 <body>
     <header>
@@ -15,15 +17,16 @@
     </header>
     <main>
 
-        <img src="img/desligada.jpg" alt="lâmpada">
+        <img id="lampada" src="img/desligada.jpg" alt="lâmpada">
         <div>
-            <button>Ligar</button>
-            <button>Desligar</button>
+            <button id="ligar">Ligar</button>
+            <button id="desligar">Desligar</button>
+            <button id="piscar">Piscar</button>
         </div>
 
     </main>
     <footer>
-
+        <span>Copyvright &copy; 2021 || Nubia Nascimento</span>
 
     </footer>
 </body>
